--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,8 +34,7 @@ jobs:
 
       - name: Run Make
         run: |
-          make -j$(nproc) -C code
-          # index.htmlをdistへ移動（これがないとPagesで表示されません）
+          make -j12 -C code
           cp index.html dist/ || true
           cp -r assets dist/ || true
 
